--- a/index.html
+++ b/index.html
@@ -1,4 +1,2 @@
-<a class="weatherwidget-io" href="https://forecast7.com/en/29d42n98d49/san-antonio/" data-label_1="SAN ANTONIO" data-label_2="WEATHER" data-theme="original" >SAN ANTONIO WEATHER</a>
-<script>
-!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src='https://weatherwidget.io/js/widget.min.js';fjs.parentNode.insertBefore(js,fjs);}}(document,'script','weatherwidget-io-js');
-</script>
+<script id="cid0020000336886617820" data-cfasync="false" async src="//st.chatango.com/js/gz/emb.js" style="width: 250px;height: 350px;">{"handle":"mexicanconsulate","arch":"js","styles":{"a":"0084ef","b":100,"c":"FFFFFF","d":"FFFFFF","k":"0084ef","l":"0084ef","m":"0084ef","n":"FFFFFF","p":"10","q":"0084ef","r":100,"cnrs":"0.35","fwtickm":1}}</script>
+
